--- a/HIS_WebApi/web.config
+++ b/HIS_WebApi/web.config
@@ -1,15 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+  <!-- ✅ Cookie Security -->
+  <system.web>
+    <httpCookies httpOnlyCookies="true" requireSSL="false" />
+  </system.web>
+
   <location path="." inheritInChildApplications="false">
     <system.webServer>
+
+      <!-- ✅ Security Headers -->
+      <httpProtocol>
+        <customHeaders>
+          <add name="X-Content-Type-Options" value="nosniff" />
+          <add name="X-Frame-Options" value="DENY" />
+          <add name="Referrer-Policy" value="no-referrer" />
+          <add name="X-XSS-Protection" value="0" />
+        </customHeaders>
+      </httpProtocol>
+
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" arguments=".\HIS_WebApi.dll" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+
+      <aspNetCore
+        processPath="dotnet"
+        arguments=".\HIS_WebApi.dll"
+        stdoutLogEnabled="false"
+        stdoutLogFile=".\logs\stdout"
+        hostingModel="inprocess" />
 
     </system.webServer>
   </location>
-
 </configuration>
-
-<!--ProjectGuid: d71ba55d-a35c-4965-bc79-e555ffdab4bb-->
