--- a/HIS_DB_Lib/HIS_DB_Lib.csproj
+++ b/HIS_DB_Lib/HIS_DB_Lib.csproj
@@ -128,6 +128,7 @@
     <Compile Include="住院藥車\nursingStationClass.cs" />
     <Compile Include="shiftClass.cs" />
     <Compile Include="住院藥車\patientInfoClass.cs" />
+    <Compile Include="儲位資訊\stockClass.cs" />
     <Compile Include="儲位資訊\stockListClass.cs" />
     <Compile Include="化療排程\CMPM_StorageConfig_Class.cs" />
     <Compile Include="commonSpaceSetup.cs" />
