--- a/HIS_DB_Lib/HIS_DB_Lib.csproj
+++ b/HIS_DB_Lib/HIS_DB_Lib.csproj
@@ -42,6 +42,12 @@
   <PropertyGroup>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <DelaySign>false</DelaySign>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AudioProcessingLibrary">
       <HintPath>..\0.DLL\AudioProcessingLibrary.dll</HintPath>
